--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Maps API</title>
     <script
-      async="false"
       defer
-      src="https://maps.googleapis.com/maps/api/js?key=&libraries=places&callback=initMap"
+      src="https://maps.googleapis.com/maps/api/js?key=KEYHERE&libraries=places&callback=initialize"
     ></script>
     <script src="index.js"></script>
     <link rel="stylesheet" href="style.css" />
@@ -18,5 +17,9 @@
       Goal: query businesses with Google Maps API and return their information.
     </div>
     <div id="map"></div>
+    <table>
+      <thead></thead>
+      <tbody></tbody>
+    </table>
   </body>
 </html>
